force-app/src/objects/CTPISA__Storecove_UBL_setting__mdt.object
<CustomObject>
    <fields>
        <fullName>CTPISA__Enable_Tracker__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Its enables tracking and saving sent invoices delivery status in separate child record instead of sales invoice or credit notes itself</inlineHelpText>
        <label>Enable Tracker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__Pick_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pick attachment file from record to send instead of FF Visualforce Invoice layout</inlineHelpText>
        <label>Pick Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__Sales_credit_note_PDF_Document_URL__c</fullName>
        <label>Sales credit note PDF Document URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__Sales_invoice_PDF_Document_URL__c</fullName>
        <label>Sales invoice PDF Document URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__Storecove_Sandbox_token__c</fullName>
        <label>Storecove Sandbox token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__Storecove_endpoint__c</fullName>
        <label>Storecove endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__Storecove_production_token__c</fullName>
        <label>Storecove production token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__perform_preflight_check__c</fullName>
        <defaultValue>true</defaultValue>
        <label>perform preflight check</label>
        <type>Checkbox</type>
    </fields>
    <label>Storecove UBL setting</label>
    <pluralLabel>Storecove UBL settings</pluralLabel>
</CustomObject>